Fix imported scripts and create var for port

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <title>Socket.IO chat</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
-  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
-  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.js"></script>
   <script src="main.js"></script>
   <body>
 	<ul class="pages">
