--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Chat</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <script src="/socket.io/socket.io.js"></script>
