Added bootstrap sources

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <title>Chat</title>
     <link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
   <script src="/socket.io/socket.io.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="main.js"></script>
   <body>
 	<ul class="pages">
