Fixed Chat message area
-overflow
-used bootstrap lists

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 	<ul class="pages">
 		<li class="chat page">
 			<div class="chatArea">
-				<ul id="messages"></ul> <!--Chat area-->
+				<ul class="list-group scrollable-list" id="messages"></ul> <!--Chat area-->
 			</div>
 			<div class="row" style="position: fixed; bottom: 10px;">
 				<form action="">
