--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,16 @@
 				<ul class="list-group scrollable-list" id="messages"></ul> <!--Chat area-->
 			</div>
 			<div class="row" style="position: fixed; bottom: 10px;">
-				<form action="">
-					<div class="col-md-9">
-						<input class="form-control" type="text" maxlength="14" id="chatmsg" placeholder="Message"/>
-					</div>
-					<div class="col-md-3">
-						<button class="btn btn-default">Send</button>
-					</div>
-				</form>
+				<div class="col-md-4 col-md-offset-4">
+					<form action="">
+						<div class="input-group">
+							<input class="form-control" type="text" maxlength="200" id="chatmsg" placeholder="Message"/>
+							<span class="input-group-btn">
+								<button class="btn btn-default">Send</button>
+							</span>
+						</div>
+					</form>
+				</div>
 			</div>
 			<!--<form action=""> 
 				<input id="m" autocomplete="off" /><button>Send</button>
@@ -31,10 +33,12 @@
 		</li>
 
 		<li class="login page">
-		  <div class="form-group">
-			  <div class="col-md-2">
-				<label for="usr">Username:</label>
-				<input class="form-control" type="text" maxlength="14" id="usr"/>
+		  <form class="form-horizontal">
+			  <div class="form-group">
+				  <label for="usr" class="col-md-2 col-md-offset-1 control-label">Username:</label>
+				  <div class="col-md-6">
+					<input class="form-control" type="text" maxlength="20" id="usr"/>
+				  </div>
 			  </div>
 		  </div>
 		</li>
