Added username filter
-display warning message if username contains special characters

--- a/public/index.html
+++ b/public/index.html
@@ -32,15 +32,15 @@
 			</form>-->
 		</li>
 
-		<li class="login page">
+		<li class="login page" id="loginpage">
 		  <form class="form-horizontal">
-			  <div class="form-group">
+			  <div class="form-group" id="formgroup">
 				  <label for="usr" class="col-md-2 col-md-offset-1 control-label">Username:</label>
-				  <div class="col-md-6">
+				  <div class="col-md-6" id="inputfield">
 					<input class="form-control" type="text" maxlength="20" id="usr"/>
 				  </div>
 			  </div>
-		  </div>
+		  </form>
 		</li>
 	</ul>
   </body>
